# pluto-duck

./: .gitignore  README.md  downloads.json  latest.json  package.json  pluto-duck-backend.spec  pnpm-lock.yaml  pyproject.toml  reset_fluxloop_env.sh
.github/workflows/: lint.yml  release.yml
backend/duckpipe/: README.md  __init__.py  errors.py
backend/tests/: test_config.py
docs/: ARCHITECTURE.md  CODESIGNING.md  Pluto_Duck_new_flow.md  QUICK_START_CODESIGNING.md  SKILLS.md  prompt-experiment-dev-guide.md
docs/plans/: 015_sidebar_assets_menu_migration.md  020_dataset_list_style_unification.md  021_dataset_list_style_unification.md  022_sidebar action buttons.md  023_backend_file_diagnosis_api.md  024_frontend_diagnosis_ux.md  025_llm_context_integration.md  026_dataset_detail_view.md  032_dataset_tab_mainview_sync.md  board-implementation-plan.md  board-refactor-lexical-plan.md  chat-asset-mention-spec.md  data-sources-ui-plan.md  duckpipe-spec.md  (+4 more)
scripts/: build-backend.sh  build-frontend-server.sh  build.sh  dev-tauri.sh  dev.sh  generate-latest-json.js  notarize.sh  prompt_profile_editor.py  tauri-before-build.sh
tauri-shell/: Cargo.toml
tauri-shell/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
tauri-shell/src-tauri/capabilities/: default.json
tauri-shell/src-tauri/icons/: 128x128.icns  32x32.icns  icon.icns  스크린샷 2025-10-24 오전 11.31.01_16x16_16x16.icns  스크린샷 2025-10-24 오전 11.31.01_256x256_256x256.icns  스크린샷 2025-10-24 오전 11.31.01_512x512_512x512.icns  스크린샷 2025-10-24 오전 11.31.01_64x64_64x64.icns
tauri-shell/src-tauri/src/: lib.rs
(+547 files in other folders)
