[package]
name = "tauri-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.0", features = ["custom-protocol"] }
tauri-build = "2.5.0"
anyhow = "1.0"
